# pgvector

./: .gitignore  Cargo.toml  docker-compose.yml
data/test/: keywords.csv  relations.csv  students.csv
database/: create_keywords_table.sql
db/: dockerfile
db/init_db/: init-db.sql
migrations/: 20240203095923_create_keyword_table.sql  20240205145704_create_search_stored_procedure.sql
src/: main.rs
