[package]
name = "pgvector_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
pgvector = { version = "0.3", features = ["postgres"] }
postgres = "0.19.7"
postgres-types = { version = "0.2.6", features=["derive"] }
ureq = "2.9.1"
async-openai = "0.17.1"
anyhow = "1.0.76"
csv = "1.3.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7"